// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion styled components Basic render: StyledContent has correct styles when expanded and disabled is set to true 1`] = `
Object {
  "backgroundColor": "$theme.colors.mono200",
  "borderBottom": "1px solid $theme.colors.mono500",
  "boxSizing": "border-box",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "height": "auto",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "marginBottom": 0,
  "marginLeft": 0,
  "marginRight": 0,
  "marginTop": 0,
  "maxHeight": "100%",
  "opacity": 1,
  "overflow": "hidden",
  "paddingBottom": "$theme.sizing.scale1000",
  "paddingLeft": "$theme.sizing.scale800",
  "paddingRight": "$theme.sizing.scale800",
  "paddingTop": "$theme.sizing.scale800",
  "transitionDuration": "$theme.animation.timing400",
  "transitionProperty": "all",
  "transitionTimingFunction": "$theme.animation.easeInOutCurve",
}
`;

exports[`Accordion styled components Basic render: StyledContent has correct styles when expanded is set to false 1`] = `
Object {
  "backgroundColor": "$theme.colors.mono200",
  "borderBottom": "none",
  "boxSizing": "border-box",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "height": "0",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "marginBottom": 0,
  "marginLeft": 0,
  "marginRight": 0,
  "marginTop": 0,
  "maxHeight": "0",
  "opacity": 0,
  "overflow": "hidden",
  "paddingBottom": 0,
  "paddingLeft": "$theme.sizing.scale800",
  "paddingRight": "$theme.sizing.scale800",
  "paddingTop": 0,
  "transitionDuration": "$theme.animation.timing400",
  "transitionProperty": "all",
  "transitionTimingFunction": "$theme.animation.easeInOutCurve",
}
`;

exports[`Accordion styled components Basic render: StyledContent has correct styles when expanded is set to true 1`] = `
Object {
  "backgroundColor": "$theme.colors.mono200",
  "borderBottom": "1px solid $theme.colors.mono500",
  "boxSizing": "border-box",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "height": "auto",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "marginBottom": 0,
  "marginLeft": 0,
  "marginRight": 0,
  "marginTop": 0,
  "maxHeight": "100%",
  "opacity": 1,
  "overflow": "hidden",
  "paddingBottom": "$theme.sizing.scale1000",
  "paddingLeft": "$theme.sizing.scale800",
  "paddingRight": "$theme.sizing.scale800",
  "paddingTop": "$theme.sizing.scale800",
  "transitionDuration": "$theme.animation.timing400",
  "transitionProperty": "all",
  "transitionTimingFunction": "$theme.animation.easeInOutCurve",
}
`;

exports[`Accordion styled components Basic render: StyledContent has correct styles when not expanded and disabled is set to true 1`] = `
Object {
  "backgroundColor": "$theme.colors.mono200",
  "borderBottom": "none",
  "boxSizing": "border-box",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "height": "0",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "marginBottom": 0,
  "marginLeft": 0,
  "marginRight": 0,
  "marginTop": 0,
  "maxHeight": "0",
  "opacity": 0,
  "overflow": "hidden",
  "paddingBottom": 0,
  "paddingLeft": "$theme.sizing.scale800",
  "paddingRight": "$theme.sizing.scale800",
  "paddingTop": 0,
  "transitionDuration": "$theme.animation.timing400",
  "transitionProperty": "all",
  "transitionTimingFunction": "$theme.animation.easeInOutCurve",
}
`;

exports[`Accordion styled components Basic render: StyledHeader has correct styles when expanded and disabled is set to true 1`] = `
Object {
  ":focus": Object {
    "backgroudColor": "$theme.colors.mono400",
  },
  "alignItems": "center",
  "backgroudColor": "$theme.colors.white",
  "borderBottom": "1px solid $theme.colors.mono500",
  "color": "$theme.colors.black",
  "cursor": "not-allowed",
  "display": "flex",
  "fontFamily": "$theme.typography.font450.fontFamily",
  "fontSize": "$theme.typography.font450.fontSize",
  "fontWeight": "$theme.typography.font450.fontWeight",
  "lineHeight": "$theme.typography.font450.lineHeight",
  "marginBottom": 0,
  "marginLeft": 0,
  "marginRight": 0,
  "marginTop": 0,
  "paddingBottom": "$theme.sizing.scale600",
  "paddingLeft": "$theme.sizing.scale700",
  "paddingRight": "$theme.sizing.scale1200",
  "paddingTop": "$theme.sizing.scale600",
  "position": "relative",
}
`;

exports[`Accordion styled components Basic render: StyledHeader has correct styles when expanded is set to false 1`] = `
Object {
  ":focus": Object {
    "backgroudColor": "$theme.colors.mono400",
  },
  "alignItems": "center",
  "backgroudColor": "$theme.colors.white",
  "borderBottom": "1px solid $theme.colors.mono400",
  "color": "$theme.colors.black",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font450.fontFamily",
  "fontSize": "$theme.typography.font450.fontSize",
  "fontWeight": "$theme.typography.font450.fontWeight",
  "lineHeight": "$theme.typography.font450.lineHeight",
  "marginBottom": 0,
  "marginLeft": 0,
  "marginRight": 0,
  "marginTop": 0,
  "paddingBottom": "$theme.sizing.scale600",
  "paddingLeft": "$theme.sizing.scale700",
  "paddingRight": "$theme.sizing.scale1200",
  "paddingTop": "$theme.sizing.scale600",
  "position": "relative",
}
`;

exports[`Accordion styled components Basic render: StyledHeader has correct styles when expanded is set to true 1`] = `
Object {
  ":focus": Object {
    "backgroudColor": "$theme.colors.mono400",
  },
  "alignItems": "center",
  "backgroudColor": "$theme.colors.white",
  "borderBottom": "1px solid $theme.colors.mono500",
  "color": "$theme.colors.black",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font450.fontFamily",
  "fontSize": "$theme.typography.font450.fontSize",
  "fontWeight": "$theme.typography.font450.fontWeight",
  "lineHeight": "$theme.typography.font450.lineHeight",
  "marginBottom": 0,
  "marginLeft": 0,
  "marginRight": 0,
  "marginTop": 0,
  "paddingBottom": "$theme.sizing.scale600",
  "paddingLeft": "$theme.sizing.scale700",
  "paddingRight": "$theme.sizing.scale1200",
  "paddingTop": "$theme.sizing.scale600",
  "position": "relative",
}
`;

exports[`Accordion styled components Basic render: StyledHeader has correct styles when not expanded and disabled is set to true 1`] = `
Object {
  ":focus": Object {
    "backgroudColor": "$theme.colors.mono400",
  },
  "alignItems": "center",
  "backgroudColor": "$theme.colors.white",
  "borderBottom": "1px solid $theme.colors.mono400",
  "color": "$theme.colors.black",
  "cursor": "not-allowed",
  "display": "flex",
  "fontFamily": "$theme.typography.font450.fontFamily",
  "fontSize": "$theme.typography.font450.fontSize",
  "fontWeight": "$theme.typography.font450.fontWeight",
  "lineHeight": "$theme.typography.font450.lineHeight",
  "marginBottom": 0,
  "marginLeft": 0,
  "marginRight": 0,
  "marginTop": 0,
  "paddingBottom": "$theme.sizing.scale600",
  "paddingLeft": "$theme.sizing.scale700",
  "paddingRight": "$theme.sizing.scale1200",
  "paddingTop": "$theme.sizing.scale600",
  "position": "relative",
}
`;

exports[`Accordion styled components Basic render: StyledPanelContainer has correct styles when expanded and disabled is set to true 1`] = `
Object {
  "width": "100%",
}
`;

exports[`Accordion styled components Basic render: StyledPanelContainer has correct styles when expanded is set to false 1`] = `
Object {
  "width": "100%",
}
`;

exports[`Accordion styled components Basic render: StyledPanelContainer has correct styles when expanded is set to true 1`] = `
Object {
  "width": "100%",
}
`;

exports[`Accordion styled components Basic render: StyledPanelContainer has correct styles when not expanded and disabled is set to true 1`] = `
Object {
  "width": "100%",
}
`;

exports[`Accordion styled components Basic render: StyledRoot has correct styles when expanded and disabled is set to true 1`] = `Object {}`;

exports[`Accordion styled components Basic render: StyledRoot has correct styles when expanded is set to false 1`] = `Object {}`;

exports[`Accordion styled components Basic render: StyledRoot has correct styles when expanded is set to true 1`] = `Object {}`;

exports[`Accordion styled components Basic render: StyledRoot has correct styles when not expanded and disabled is set to true 1`] = `Object {}`;

exports[`Accordion styled components Basic render: StyledToggleIcon has correct styles when expanded and disabled is set to true 1`] = `
Object {
  "cursor": "not-allowed",
  "display": "inline-block",
  "fill": "$theme.colors.mono600",
  "height": "$theme.sizing.scale600",
  "position": "absolute",
  "right": "12px",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Accordion styled components Basic render: StyledToggleIcon has correct styles when expanded is set to false 1`] = `
Object {
  "cursor": "pointer",
  "display": "inline-block",
  "fill": "$theme.colors.mono600",
  "height": "$theme.sizing.scale600",
  "position": "absolute",
  "right": "12px",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Accordion styled components Basic render: StyledToggleIcon has correct styles when expanded is set to true 1`] = `
Object {
  "cursor": "pointer",
  "display": "inline-block",
  "fill": "$theme.colors.mono600",
  "height": "$theme.sizing.scale600",
  "position": "absolute",
  "right": "12px",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Accordion styled components Basic render: StyledToggleIcon has correct styles when not expanded and disabled is set to true 1`] = `
Object {
  "cursor": "not-allowed",
  "display": "inline-block",
  "fill": "$theme.colors.mono600",
  "height": "$theme.sizing.scale600",
  "position": "absolute",
  "right": "12px",
  "width": "$theme.sizing.scale600",
}
`;
